[package]
name = "learn-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
axum = { version = "0.6.20", features = ["query"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "full"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"]}
serde = { version = "1.0.188", features = ["derive"] }
email_address = "0.2.4"
headers = "0.3.9"
serde_with = "3.3.0"
