[package]
name = "learn-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
# askama = "0.12.0"
axum = { version = "0.6.20", features = ["query", "headers", "macros"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "full"] }
sqlx = { version = "0.6.2", features = ["mysql"]}
serde = { version = "1.0.188", features = ["derive"] }
email_address = "0.2.4"
headers = "0.3.9"
serde_with = "3.3.0"
futures-util = "0.3.28"
axum-flash = "0.7.0"
maud = { git="https://github.com/RedPhoenixQ/maud.git", branch="literals_in_attributes", features = ["axum"] }
log = "0.4.20"
terminal-link = "0.1.0"
axum-login = { version = "0.6.0", features=["mysql"]} 
argon2 = "0.5.2"
# percy-dom = "0.9.6"
# html-macro = "0.2.2"
# futures-core = "0.3.28"
